Play button + text interactive & fading

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
         <div id="song-card-info-album">Aladdin Sane</div>
         <div id="song-card-info-title">Let's spend the night together</div>
       </div>
+      <div id="song-card-play-button">
+        <div id="triangle"></div>
+      </div>
     </div>
   </body>
 </html>
